<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.quizapp.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginBottom="10dp"
        android:text="@string/welcome_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/question"
        android:text="@string/first_question"/>

    <EditText
        style="@style/answers"
        android:id="@+id/first_answer"
        android:layout_width="match_parent"
        android:hint="Name"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/question"
        android:text="@string/second_question"/>

    <RadioGroup
        android:id="@+id/second_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            style="@style/answers"
            android:id="@+id/second_question_option_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_question_option_1" />

        <RadioButton
            style="@style/answers"
            android:id="@+id/second_question_option_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_question_option_2" />

        <RadioButton
            style="@style/answers"
            android:id="@+id/second_question_option_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_question_option_3" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/question"
        android:text="@string/third_question"/>

    <CheckBox
        style="@style/answers"
        android:id="@+id/third_answer_option_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_question_option_1" />

    <CheckBox
        style="@style/answers"
        android:id="@+id/third_answer_option_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_question_option_2" />

    <CheckBox
        style="@style/answers"
        android:id="@+id/third_answer_option_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_question_option_3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/question"
        android:text="@string/fourth_question"/>

    <RadioGroup
        android:id="@+id/fourth_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            style="@style/answers"
            android:id="@+id/fourth_answer_option_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourth_question_option_1" />

        <RadioButton
            style="@style/answers"
            android:id="@+id/fourth_answer_option_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourth_question_option_2" />

    </RadioGroup>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:onClick="submit"
        android:text="@string/submit_button" />

    <TextView
        android:id="@+id/final_message"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/final_score"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
</ScrollView>